# AnnyBody

./: README.md  build_and_push_doc.bash  cmd_history.txt  pyproject.toml
src/anny/: parameters_regressor.py  paths.py
src/anny/examples/: benchmark.py  fit_to_mesh.py  interactive_demo.py
src/anny/models/: __init__.py  full_model.py  retopology.py
src/anny/utils/: obj_utils.py  warp_mesh_utils.py
test/: test_degenerate_configuration.py
tutorials/: alternative_models.ipynb  pose_parameterization.ipynb  shape_parameterization.ipynb  texture.ipynb
tutorials/examples/: tmpr_k8vp68.json  tmpz3zzdopx.glb
