[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "anny"
version = "0.3.0"
authors = [
    { name = "Romain Brégier", email = "romain.bregier@naverlabs.com" }
]
description="A parametric body model based on MakeHuman for PyTorch."
readme = "README.md"
license-files = ["LICENSE", "LICENSE_THINGS"]

dependencies = [
    "torch>=2.0.0",
    "roma>=1.5.2.1",
    "numpy",
    "pyyaml",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"anny" = ["data/*"]

[project.optional-dependencies]
examples = [
    "gradio",
    "jsonargparse",
    "trimesh",
    "requests"
]
warp = [
    "warp-lang"
]